[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_diff"
version = "2023.1.1a1"
description = "Difftool for Render Engine"
readme = "README.md"

dependencies = ["render-engine>=2023.1.3a1"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://github.com/kjaymiller/"
repository = "https://github.com/kjaymiller/"

[tool.pytest.ini_options]
pythonpath = ["src"]
